# realestate-analysis

./: .env.example  apt_list.txt  output.csv  pyproject.toml  realestate_csv.py  requirements.txt  sample_input.csv
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-molit-data-collection/: 02-01-PLAN.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/data/: region_codes.py
app/utils/: config.py
pipeline/: __init__.py
pipeline/cli/: main.py
pipeline/clients/: __init__.py  kakao_geo.py  molit.py  tmap.py
pipeline/collectors/: __init__.py  building_info.py  commute_stops.py  geocode.py  subway_distances.py  trade_rent.py
pipeline/config/: __init__.py  regions.py
pipeline/data/: stations.xlsx
pipeline/graph/: station_loader.py
pipeline/processors/: __init__.py  normalizer.py
pipeline/storage/: __init__.py  repository.py  schema.py
pipeline/utils/: __init__.py  idempotency.py
tests/: conftest.py  test_pipeline_foundation.py  test_pipeline_phase2.py  test_pipeline_phase3.py  test_pipeline_phase4.py  test_pipeline_phase5.py
(+31 files in other folders)
